package com.syncer.syner;

import lombok.Data;

@Data
public class SyncerData<T> {
    T data;
}
